Fix layout for video on mobile.

--- a/app/_scss/mobile.scss
+++ b/app/_scss/mobile.scss
@@ -54,4 +54,8 @@
   .rhs {
     display: none;
   }
+
+  iframe {
+    max-width: 100%;
+  }
 }
